--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "2.1.0",
-  "repository": "key-data-systems/embed-pivot-support",
+  "version": "1.0.0",
+  "repository": "key-data-systems/embed-pivot",
   "description": "embed-pivot",
   "main": "lib/embed-pivot.js",
   "module": "lib/embed-pivot.js",
@@ -20,31 +20,32 @@
     "web-components",
     "custom-element",
     "pie",
-    "print"
+    "pivot"
   ],
   "license": "BSD-3-Clause",
   "dependencies": {
-    "lit": "^2.0.0-rc.3",
-    "lit-html": "^2.0.0-rc.2"
+    "lit": "^2.0.2",
+    "lit-html": "^2.0.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "@webcomponents/webcomponentsjs": "^2.6.0",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.2.3",
-    "@semantic-release/npm": "^7.1.3",
-    "@semantic-release/release-notes-generator": "^9.0.3",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.2",
+    "@semantic-release/npm": "^8.0.3",
+    "@semantic-release/release-notes-generator": "^10.0.2",
     "deepmerge": "^4.2.2",
-    "eslint": "^7.32.0",
-    "esbuild": "^0.12.23",
+    "eslint": "^8.2.0",
+    "esbuild": "^0.13.13",
     "lit-analyzer": "^1.2.1",
-    "prettier": "^2.3.2",
+    "npm-check-updates": "^12.0.2",
+    "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
-    "semantic-release": "^17.4.7",
-    "typescript": "^4.4.2",
+    "semantic-release": "^18.0.0",
+    "typescript": "^4.4.4",
     "web-component-analyzer": "^1.1.6"
   }
 }
